z-index for safari fixed;

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -92,6 +92,7 @@ body{
   left: 0;
   right: 0;
   z-index: -10;
+  -webkit-transform: translate3d(0,0,0);
 }	
 .break{
 	width: 100%;
